Rename to GlamSiphon

--- a/GlamSiphon/GlamSiphon.csproj
+++ b/GlamSiphon/GlamSiphon.csproj
@@ -4,19 +4,19 @@
 
   <PropertyGroup>
     <Authors></Authors>
-    <Company></Company>
+    <Company>GlamSiphon</Company>
     <Version>0.0.0.1</Version>
-    <Description>A sample plugin.</Description>
+    <Description>Exports a model of FFXIV characters after applying Penumbra/Glamourer.</Description>
     <Copyright></Copyright>
-    <PackageProjectUrl>https://github.com/goatcorp/SamplePlugin</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/lucasfisher0/GlamSiphon</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Data\goat.png">
+    <!--<Content Include="..\Data\goat.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Visible>false</Visible>
-    </Content>
+    </Content>-->
   </ItemGroup>
 </Project>
