--- a/.editorconfig
+++ b/.editorconfig
@@ -57,15 +57,15 @@ dotnet_naming_symbols.private_static_fields_symbols.required_modifiers = static
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_accessibilities = private
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_kinds = field
 dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static,readonly
-dotnet_style_parentheses_in_arithmetic_binary_operators =always_for_clarity:suggestion
-dotnet_style_parentheses_in_other_binary_operators =always_for_clarity:suggestion
+dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:suggestion
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:suggestion
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:suggestion
 dotnet_style_predefined_type_for_member_access = true:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
-dotnet_style_parentheses_in_other_operators=always_for_clarity:silent
+dotnet_style_parentheses_in_other_operators = always_for_clarity:silent
 dotnet_style_object_initializer = false
 csharp_space_between_method_call_empty_parameter_list_parentheses = false
-csharp_space_between_method_call_parameter_list_parentheses = false
+csharp_space_between_method_call_parameter_list_parentheses = true
 csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
 csharp_space_between_empty_square_brackets = false
 csharp_space_before_semicolon_in_for_statement = false
@@ -74,21 +74,23 @@ csharp_space_before_comma = false
 csharp_space_after_keywords_in_control_flow_statements = true
 csharp_space_after_comma = true
 csharp_space_after_cast = false
-csharp_space_around_binary_operators  = before_and_after
+csharp_space_around_binary_operators = before_and_after
 csharp_space_between_method_declaration_name_and_open_parenthesis = false
-csharp_space_between_method_declaration_parameter_list_parentheses = false
-csharp_space_between_parentheses = none
+csharp_space_between_method_declaration_parameter_list_parentheses = true
+csharp_space_between_parentheses = control_flow_statements,expressions
 csharp_space_between_square_brackets = false
 
 # ReSharper properties
 resharper_align_linq_query = true
 resharper_align_multiline_argument = true
+resharper_align_multiline_binary_patterns = true
 resharper_align_multiline_calls_chain = true
 resharper_align_multiline_expression = true
 resharper_align_multiline_extends_list = true
 resharper_align_multiline_for_stmt = true
 resharper_align_multline_type_parameter_constrains = true
 resharper_align_multline_type_parameter_list = true
+resharper_align_tuple_components = true
 resharper_apply_on_completion = true
 resharper_auto_property_can_be_made_get_only_global_highlighting = none
 resharper_auto_property_can_be_made_get_only_local_highlighting = none
@@ -100,14 +102,20 @@ resharper_csharp_align_multiple_declaration = true
 resharper_csharp_empty_block_style = together_same_line
 resharper_csharp_int_align_comments = true
 resharper_csharp_new_line_before_while = true
+resharper_csharp_outdent_commas = true
+resharper_csharp_outdent_dots = true
+resharper_csharp_space_within_array_access_brackets = true
 resharper_csharp_wrap_after_declaration_lpar = true
 resharper_enforce_line_ending_style = true
+resharper_int_align = true
 resharper_member_can_be_private_global_highlighting = none
 resharper_member_can_be_private_local_highlighting = none
 resharper_new_line_before_finally = false
+resharper_outdent_binary_ops = true
 resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_field_attribute_on_same_line = false
 resharper_show_autodetect_configure_formatting_tip = false
+resharper_space_within_list_pattern_brackets = true
 resharper_use_indent_from_vs = false
 
 # ReSharper inspection severities
@@ -129,10 +137,10 @@ resharper_suggest_var_or_type_built_in_types_highlighting = hint
 resharper_suggest_var_or_type_elsewhere_highlighting = hint
 resharper_suggest_var_or_type_simple_types_highlighting = hint
 resharper_unused_auto_property_accessor_global_highlighting = none
-csharp_style_deconstructed_variable_declaration=true:silent
+csharp_style_deconstructed_variable_declaration = true:silent
 
 [*.{appxmanifest,asax,ascx,aspx,axaml,axml,build,c,c++,cc,cginc,compute,config,cp,cpp,cs,cshtml,csproj,css,cu,cuh,cxx,dbml,discomap,dtd,h,hh,hlsl,hlsli,hlslinc,hpp,htm,html,hxx,inc,inl,ino,ipp,js,json,jsproj,jsx,lsproj,master,mpp,mq4,mq5,mqh,njsproj,nuspec,paml,proj,props,proto,razor,resjson,resw,resx,skin,StyleCop,targets,tasks,tpp,ts,tsx,usf,ush,vb,vbproj,xaml,xamlx,xml,xoml,xsd}]
 indent_style = space
 indent_size = 4
 tab_width = 4
-dotnet_style_parentheses_in_other_operators=always_for_clarity:silent
+dotnet_style_parentheses_in_other_operators = always_for_clarity:silent
